k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: online-shop-deployment
  namespace: online-shop
  labels:
    app: online-shop

spec:
  replicas: 2
  selector:
    matchlabels:
       app: online-shop
  template:
    metadata:
      name:  online-shop-pod
      namespace: online-shop
      labels:
        app: online-shop
    spec:
      container:
      - name: online-shop-container
        image: karansharmadocker123/online-shop-app:latest
        ports:
          - containerPort: 5173
